--- a/contact.html
+++ b/contact.html
@@ -8,20 +8,20 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Header -->
+
   <header>
     <h1>Contact Us</h1>
     <nav>
   <ul>
     <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
+    <li><a href="Menu.html">Menu</a></li>
     <li><a href="events.html">Events</a></li>
-    <li><a href="contact.html">Contact</a></li>
+    
   </ul>
 </nav>
 </header>
 
-  <!-- Main Content -->
+  
   <main>
     <section>
       <h2>Get in Touch</h2>
@@ -50,7 +50,7 @@
     </section>
   </main>
 
-  <!-- Footer -->
+
   <footer>
     <p>&copy; 2025 THE KETTLE | All rights reserved.</p>
   </footer>
