--- a/events.html
+++ b/events.html
@@ -53,7 +53,7 @@
 
   
   <footer>
-    <p>&copy; 2025 THE kETTLE | All rights reserved.</p>
+    <p>&copy; 2025 THE KETTLE | All rights reserved.</p>
   </footer>
 </body>
 </html>
