--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
   </ul>
 </nav>
 
+<img src="https://img.freepik.com/free-photo/interior-shot-cafe-with-chairs-near-bar-with-wooden-tables_181624-1669.jpg" 
+alt="Cafe Image" style="width:900px;height:500px;">
+
 
 <main>
 <section>
