Updated Webpage, images added and content

--- a/Menu.html
+++ b/Menu.html
@@ -19,7 +19,8 @@
   </ul>
 </nav>
 
-
+<img src="c:\Users\Dell\Desktop\WEB5112 POE PARTS\Images\menu.PNG" 
+alt="Cafe Image" style="width:900px;height:500px;">
 
   
 <main>
